--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.56.1</domain>
         <domain includeSubdomains="true">192.168.1.8</domain>
+        <domain includeSubdomains="true">books.google.com</domain>
     </domain-config>
 </network-security-config>
